# energy-ag

./: .env.example  .gitignore  README.md  conda.yaml  email_util.py  pyproject.toml  robot.yaml  secrets_util.py  tasks.py
.github/workflows/: deploy.yml
libraries/: decorators.py  logger.py  utils.py
tests/: test_decorators.py  test_environment.py  test_growatt.py  test_process.py  test_secrets_util.py  test_sheets.py  test_utils.py
utils/: utils.py
workflow/: growatt.py  process.py  saj.py  solis.py  weg.py
