[project]
name = "energy-ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet>=3.0.2,<6",
    "playwright>=1.58.0",
    "python-dotenv>=1.0.0",
    "robocorp>=3.1.1",
    "robocorp-browser>=2.0.0",
    "rpaframework>=31.2.0",
]
