[project]
name = "energy-ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet>=3.0.2,<6",
    "gspread>=6.2.1",
    "playwright>=1.58.0",
    "python-dotenv>=1.0.0",
    "robocorp>=3.1.1",
    "robocorp-browser>=2.0.0",
    "rpaframework>=31.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
